syntax = "proto3";
package zomb.amm.v1beta1;

import "cosmos/base/query/v1beta1/pagination.proto";
import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "zomb/amm/v1beta1/amm.proto";
import "zomb/amm/v1beta1/params.proto";

option go_package = "github.com/pumpkinzomb/zomb-amm/x/amm/types";
option (gogoproto.goproto_getters_all) = false;

service Query {
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/zomb/amm/v1beta1/params";
  }
  rpc Pairs(QueryPairsRequest) returns (QueryPairsResponse) {
    option (google.api.http).get = "/zomb/amm/v1beta1/pairs";
  }
  rpc Pair(QueryPairRequest) returns (QueryPairResponse) {
    option (google.api.http).get = "/zomb/amm/v1beta1/paris/{id}";
  }
}

message QueryParamsRequest {}

message QueryParamsResponse {
  Params params = 1 [(gogoproto.nullable) = false];
}

message QueryPairsRequest {
  cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryPairsResponse {
  repeated Pair pairs = 1 [(gogoproto.nullable) = false];
  cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

message QueryPairRequest {
  uint64 id = 1;
}

message QueryPairResponse {
  Pair pair = 1 [(gogoproto.nullable) = false];
}
